--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
   "homepage": "https://github.com/flexxnn/sequelize-auto-migrations#readme",
   "dependencies": {
     "async": "^2.5.1",
-    "command-line-args": "^5.0.2",
-    "deep-diff": "^0.3.8",
-    "js-beautify": "^1.8.9",
-    "lodash": "^4.17.11",
-    "object-hash": "^1.3.1",
-    "sequelize": "^4.42.0"
+    "command-line-args": "^5.2.1",
+    "deep-diff": "^1.0.2",
+    "js-beautify": "^1.14.9",
+    "lodash": "^4.17.21",
+    "object-hash": "^3.0.0",
+    "sequelize": "^6.33.0"
+  },
+  "peerDependencies": {
+    "pg": "^8.11.3"
   }
 }
